--- a/views/citas.hbs
+++ b/views/citas.hbs
@@ -53,7 +53,7 @@
             {{/each}}
             </tbody>
         </table>
-        <center><a href="../public/index.html"><button type="button" id="volver" class="btn btn-outline-light">Volver</button></center>
+        <center><a href="../index.html"><button type="button" id="volver" class="btn btn-outline-light">Volver</button></center>
     </main>
 
     <div class="container">
